--- a/index.html
+++ b/index.html
@@ -10,12 +10,27 @@
   </head>
   <body>
     <!-- title -->
-    <h1>unsplash infinite scroll</h1>
+    <h1>Unsplash Infinite Scroll</h1>
 
-    <div class="loading" id="loading">
-      <img src="loading.svg" alt="loading" hidden />
+    <div class="loading" id="loading" hidden>
+      <img src="loading.svg" alt="loading" />
     </div>
 
+    <!-- image-container -->
+    <div class="image-container" id="image-container">
+      <img
+        src="https://images.unsplash.com/photo-1721332154191-ba5f1534266e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxfHx8ZW58MHx8fHx8"
+        alt=""
+      />
+      <img
+        src="https://images.unsplash.com/photo-1721332154191-ba5f1534266e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxfHx8ZW58MHx8fHx8"
+        alt=""
+      />
+      <img
+        src="https://images.unsplash.com/photo-1721332154191-ba5f1534266e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxfHx8ZW58MHx8fHx8"
+        alt=""
+      />
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
   </body>
